[gd_scene load_steps=31 format=3 uid="uid://b06bn0473uhw0"]

[ext_resource type="Script" path="res://Enemies/The Keeper/the_keeper.gd" id="1_h0nu5"]
[ext_resource type="Texture2D" uid="uid://b56n854d0tnhh" path="res://Enemies/The Keeper/Attack1/1.png" id="1_x8lw6"]
[ext_resource type="Texture2D" uid="uid://dyqxx0i2is155" path="res://Enemies/The Keeper/Attack1/2.png" id="2_v6luj"]
[ext_resource type="Texture2D" uid="uid://c4vko3glejfh1" path="res://Enemies/The Keeper/Attack1/3.png" id="3_62nha"]
[ext_resource type="Texture2D" uid="uid://duuko6v05yt6u" path="res://Enemies/The Keeper/Attack1/6.png" id="6_nndqt"]
[ext_resource type="Texture2D" uid="uid://b6b10e5g8182w" path="res://Enemies/The Keeper/Attack1/7.png" id="7_g5eaf"]
[ext_resource type="Texture2D" uid="uid://bebfe1mypikrj" path="res://Enemies/The Keeper/Attack1/8.png" id="8_v4jyf"]
[ext_resource type="Texture2D" uid="uid://cgjudvya6y85b" path="res://Enemies/The Keeper/Attack2/1.png" id="9_7oy0p"]
[ext_resource type="Texture2D" uid="uid://w86f5vdirgaa" path="res://Enemies/The Keeper/Attack1/9.png" id="9_xr6tm"]
[ext_resource type="Texture2D" uid="uid://dova8todl5pgi" path="res://Enemies/The Keeper/Attack2/2.png" id="10_2og0e"]
[ext_resource type="Texture2D" uid="uid://ce5omgjanscg" path="res://Enemies/The Keeper/Idle/1.png" id="10_41vfg"]
[ext_resource type="Texture2D" uid="uid://cab5rticw2xyq" path="res://Enemies/The Keeper/Attack2/3.png" id="11_grsi7"]
[ext_resource type="Texture2D" uid="uid://dyd7re2pqeduy" path="res://Enemies/The Keeper/Idle/2.png" id="11_pasqf"]
[ext_resource type="Texture2D" uid="uid://dhgn6rlskv03h" path="res://Enemies/The Keeper/Attack2/4.png" id="12_chqap"]
[ext_resource type="Texture2D" uid="uid://cm0uruyrcm0gg" path="res://Enemies/The Keeper/Idle/3.png" id="12_dhq8c"]
[ext_resource type="Texture2D" uid="uid://dwi3dsux2avcb" path="res://Enemies/The Keeper/Idle/4.png" id="13_v46j8"]
[ext_resource type="Texture2D" uid="uid://d0jg13rqadq2f" path="res://Enemies/The Keeper/Move/1.png" id="15_8v4ue"]
[ext_resource type="Texture2D" uid="uid://36tna83qam46" path="res://Enemies/The Keeper/Move/2.png" id="16_s6ye7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6jho2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_x8lw6")
}, {
"duration": 1.0,
"texture": ExtResource("2_v6luj")
}, {
"duration": 1.0,
"texture": ExtResource("3_62nha")
}, {
"duration": 1.0,
"texture": ExtResource("6_nndqt")
}, {
"duration": 1.0,
"texture": ExtResource("7_g5eaf")
}, {
"duration": 1.0,
"texture": ExtResource("8_v4jyf")
}, {
"duration": 1.0,
"texture": ExtResource("9_xr6tm")
}],
"loop": true,
"name": &"Attack1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7oy0p")
}, {
"duration": 1.0,
"texture": ExtResource("10_2og0e")
}, {
"duration": 1.0,
"texture": ExtResource("11_grsi7")
}, {
"duration": 1.0,
"texture": ExtResource("12_chqap")
}],
"loop": true,
"name": &"Attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_41vfg")
}, {
"duration": 1.0,
"texture": ExtResource("11_pasqf")
}, {
"duration": 1.0,
"texture": ExtResource("12_dhq8c")
}, {
"duration": 1.0,
"texture": ExtResource("13_v46j8")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_8v4ue")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_8v4ue")
}, {
"duration": 1.0,
"texture": ExtResource("16_s6ye7")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_byrno"]
resource_name = "Attack1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ew22a"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_1jyxo"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qd13u"]
resource_name = "Move"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_3o5al"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5road"]
_data = {
"Attack1": SubResource("Animation_byrno"),
"Idle": SubResource("Animation_ew22a"),
"Jump": SubResource("Animation_1jyxo"),
"Move": SubResource("Animation_qd13u"),
"RESET": SubResource("Animation_3o5al")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_452qw"]
radius = 20.0
height = 54.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbkcr"]
size = Vector2(76, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5of6"]
size = Vector2(76, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsjiq"]
size = Vector2(1090, 638)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uocj5"]
size = Vector2(30, 11)

[node name="The_Keeper" type="CharacterBody2D" groups=["Boss", "Enemies"]]
script = ExtResource("1_h0nu5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2, 0)
sprite_frames = SubResource("SpriteFrames_6jho2")
animation = &"Attack1"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5road")
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(2, 11)
shape = SubResource("CapsuleShape2D_452qw")

[node name="Attack_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_left"]
position = Vector2(-36, 13.5)
shape = SubResource("RectangleShape2D_tbkcr")
debug_color = Color(0.980392, 0, 0.372549, 0.419608)

[node name="Attack_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_right"]
position = Vector2(40, 13.5)
shape = SubResource("RectangleShape2D_q5of6")
debug_color = Color(0.996078, 0, 0.223529, 0.419608)

[node name="Search" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Search"]
shape = SubResource("RectangleShape2D_dsjiq")
debug_color = Color(0.827451, 0.388235, 0.215686, 0.419608)

[node name="Jump_kill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump_kill"]
position = Vector2(2, 33.5)
shape = SubResource("RectangleShape2D_uocj5")
debug_color = Color(0.501961, 0, 0.0941176, 0.419608)

[node name="DamageCD" type="Timer" parent="."]

[connection signal="body_entered" from="Attack_left" to="." method="_on_attack_left_body_entered"]
[connection signal="body_exited" from="Attack_left" to="." method="_on_attack_left_body_exited"]
[connection signal="body_entered" from="Attack_right" to="." method="_on_attack_right_body_entered"]
[connection signal="body_exited" from="Attack_right" to="." method="_on_attack_right_body_exited"]
[connection signal="body_entered" from="Search" to="." method="_on_search_body_entered"]
[connection signal="body_entered" from="Jump_kill" to="." method="_on_jump_kill_body_entered"]
[connection signal="timeout" from="DamageCD" to="." method="_on_damage_cd_timeout"]
